board: fixed comment position from right side to meta info wrap

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3197,6 +3197,14 @@ div.markdown-preview {
                     color: #696969;
                     margin-right:5px;
                 }
+
+                .comment-wrap {
+                    display:inline-block;
+                    margin-left:10px;
+                    
+                    .num { color: @secondary; font-weight:bold; }
+                    .icon {  margin-right: 3px; color : #51aacc; } 
+                }
             }
         }
         .author-avatar-space{
